--- a/index.html
+++ b/index.html
@@ -4,9 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <!-- font awesome link -->
+    <script src="https://kit.fontawesome.com/18e2a357ae.js" crossorigin="anonymous"></script>
     <title>New Architects</title>
 </head>
 <body>
-    
+    <!--------------- 
+        header starts
+    --------------- -->
+    <header>
+<nav>
+<span class="logo"> G3 Architects</span>
+<span>
+   <a href="#">Home</a>
+   <a href="#">Service</a>
+   <a href="#">Blog</a>
+   <a href="#">Contact</a>
+</span>
+</nav>
+<div class="brand-section">
+  <div class="brand-text">
+    <div class="header-title">
+        Brand New 
+Group of Architects 
+    </div>
+    <div class="header-des">
+        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+    </div>
+    <div class="header-button">
+        <button>Explore More</button>
+    </div>
+  </div>
+    <div class="header-image">
+        <img src="images/banner.png" alt="">
+    </div>
+</div>
+    </header>
+    <!-- header ends -->
+
+    <!-- main starts -->
+    <main>
+
+    </main>
+    <!-- main ends -->
+
+    <!-- footer starts -->
+    <footer>
+
+    </footer>
+    <!-- footer ends -->
+
 </body>
 </html>
