--- a/index.html
+++ b/index.html
@@ -103,7 +103,57 @@ Group of Architects
                 Experience
             </p></button>
     </div>
-</section>
+    <seciton class="container">
+    <div class="fact-section">
+        <h2 class="fact-title">Some Facts</h2>
+        <p class="fact-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+    </div>
+    <div class="fact-item">
+        <div class="item-box">
+           <div class="item-nano-box">
+            <img src="images/icons/customers.png" alt="">
+            <h3 class="box-number">54</h3>
+            <p class="box-des">Awards Winnings</p>
+           </div>
+        </div>
+        <div class="item-box">
+           <div class="item-nano-box">
+            <img src="images/icons/email.png" alt="">
+            <h3 class="box-number">22578</h3>
+            <p class="box-des">Email Send</p>
+           </div>
+        </div>
+        <div class="item-box">
+            <div class="item-nano-box">
+                <img src="images/icons/projects.png"  alt="">
+            <h3 class="box-number">1458</h3>
+            <p class="box-des">Project Finished</p>
+            </div>
+        </div>
+        <div class="item-box">
+            <div class="item-nano-box">
+                <img src="images/icons/ribon.png" alt="">
+            <h3 class="box-number">590</h3>
+            <p class="box-des">Clients Worked</p>
+            </div>
+        </div>
+    </div>
+    </seciton>
+    <!-- newslater start -->
+    <section class="container">
+        <div class="newslater-section">
+            <div class="newslater-text">
+                <h3 class="newslater-title">Join our newslater</h3>
+                <p class="newslater-des">weekly Free UL resources straight to your inbox</p>
+                <div class="newslater-signup">
+                    <div class="email-box">
+                        <input type="email" name="" id="newsemail" placeholder="your email">
+                        <button type="submit">Sign Up</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     </main>
     <!-- main ends -->
 
