our sponspors added

--- a/index.html
+++ b/index.html
@@ -154,6 +154,20 @@ Group of Architects
             </div>
         </div>
     </section>
+    <!-- our sponspors start -->
+    <section class="container">
+        <div class="spon-text">
+<h3 class="spon-text-title">Our Sponspors</h3>
+<p class="spon-text-des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+</div>
+<div class="spon-company">
+    <div class="spon-company-name"><img src="images/sponsors/amazon.png" alt=""></div>
+    <div class="spon-company-name"><img src="images/sponsors/figma.png" alt=""></div>
+    <div class="spon-company-name"><img src="images/sponsors/google.png" alt=""></div>
+    <div class="spon-company-name"><img src="images/sponsors/spotify.png" alt=""></div>
+    <div class="spon-company-name"><img src="images/sponsors/telerama.png" alt=""></div>
+</div>
+    </section>
     </main>
     <!-- main ends -->
 
