--- a/index.html
+++ b/index.html
@@ -173,7 +173,11 @@ Group of Architects
 
     <!-- footer starts -->
     <footer>
-
+<sectoin class="container">
+<div class="footer-section">
+    <p class="footer-text">All rights reserved &copycopyright@2023 startup landing page design</p>
+</div>
+</sectoin>
     </footer>
     <!-- footer ends -->
 
