mobile responsive added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
 <nav>
 <span class="logo"> G3 Architects</span>
-<span>
+<span class="menu-list">
    <a href="#">Home</a>
    <a href="#">Service</a>
    <a href="#">Blog</a>
